GH-2953: Add NullAway support into the project
Fixes: https://github.com/spring-projects/spring-amqp/issues/2953

* Migrate nullability to JSpecify
* Add `net.ltgt.errorprone` Gradle plugin and respective `NullAway` configuration
* Remove redundant `com.github.spotbugs` since it covered now by the `net.ltgt.errorprone` tool
* Use Java `23` for the latest fixes on Java nullability
* Fix JavaDocs and `this-escape` warnings in the code
* Use `main` for reusable workflows which come already with Java `23`
* Fix all the nullability problems in the project